--- a/css/style.css
+++ b/css/style.css
@@ -1,133 +1,65 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-
-body {
+body{
+  background-color: black;
   font-family: 'Roboto Condensed', sans-serif;
-  margin: 0;
-  background: #eee;
-  height: auto;
 }
-
-h1 {
-  font-weight: 400;
-  font-size: 2.5rem;
-  text-transform: uppercase;
-  margin: 0;
-}
-
-h2 {
-  font-weight: 400;
-  font-size: 1.2rem;
-  text-transform: capitalize;
-  margin: 0;
-}
-
-img {
-  display: block;
-  width: 100%;
-}
-
-main {
-  max-width: 900px;
-  margin: auto;
-  box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.1),
-    -30px 0px 40px rgba(0, 0, 0, 0.1);
-}
-
-#landing {
-  background: #fff;
-}
-
-#landing-text {
+#landing{
+  background-image: url("https://i.imgur.com/TEEFRKk.gif");
+  background-position: center;
   display: flex;
-  flex: 0 1 40vw;
-  height: 50vh;
+  height: 100vh;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  padding-right: 1rem;
-  padding-left: 1rem;
 }
-
-#landing-text h2 {
-  color: #888;
+#landing-text{
+  background: white;
+  width: 38vh;
+  height: 38vh;
+  border-radius: 50%;
+  box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.3),
+              -30px 0px 40px rgba(0, 0, 0, 0.3);
 }
-
-#landing-image img{
-  /* background: url(./images/banner.gif); */
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 50vh;
-  flex: 0 1 60vw;
+#landing-text-inner{
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  overflow: wrap; 
 }
-
+#landing-text-inner h2{
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2rem; 
+  line-height: 104%;
+  color: grey;
+}
+#landing-text-inner span{
+  padding-top: 0;
+  font-size: .95rem;
+}
+#logo{
+  padding-top: 3vh;
+  padding-bottom: 0.1vh;
+  width:26vh;
+  height: 26vh;
+}
 .btn {
   padding: 0.5rem 2rem;
-  border: 1px #ccc solid;
+  border: 4px #dddddd solid;
   display: inline-block;
-  margin: 2rem 0 0;
+  margin-top: 5vh;
   border-radius: 50px;
   text-decoration: none;
+  background-color:white;
   color: #333;
   transition: background 500ms ease;
+  box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.3),
+  -30px 0px 40px rgba(0, 0, 0, 0.3);
 }
-
 .btn:hover {
-  background: #f4f4f4;
-}
-
-#header {
-  padding: 1.5rem;
-  text-align: center;
-  background: #333;
-  color: #fff;
-}
-
-#header h2 {
-  border-left: dotted 1px #fff;
-  border-right: dotted 1px #fff;
-  display: inline-block;
-  padding-right: 1rem;
-  padding-left: 1rem;
-}
-
-.caption {
-  padding: 0.8rem;
-  text-align: center;
-}
-
-footer {
-  text-align: center;
-  padding: 2rem 1rem;
-  margin: auto;
-  color: #333;
-}
-
-footer h3 {
-  font-size: 3rem;
-  margin-bottom: 0;
-}
-
-/* Screen Sizes 500px and Up */
-@media (min-width: 500px) {
-  #landing {
-    display: flex;
-    height: 100%;
-  }
-
-  #landing-text {
-    height: 100vh;
-  }
-
-  #landing-image {
-    height: 100vh;
-  }
-}
-
-/* Screen Sizes 700px and Up */
-@media (min-width: 700px) {
-  .btn {
-    padding: 1rem 3rem;
-  }
+  /* color: white; */
+  background: #dddddd;
 }
