--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   border: 0;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
   /* box-sizing: border-box; */
 }
 body{
@@ -35,6 +36,7 @@ body{
   margin-top: 1.5vh;
   background-color:white;
   border: 4px #dddddd solid;
+  text-align: center;
 }
 /* landing */
 #landing{
@@ -90,44 +92,132 @@ body{
   flex-direction: column;
   padding: 0;
   margin: 0;
-  
   background: red;
 }
 #description h2{
-  margin: 3vw;
+  margin: 3vh;
   text-align: left;
   color: white
 }
 #diagram{
   display:flex;
   flex-direction: column;
+  height:70vh;
   justify-content: center;
   align-items: center;
 }
 .diagram-block{
   width:80vw;
   height:16vh;
-  margin-bottom: 3vh;
-  max-width: 800px;
-  background:black;
+  margin-bottom: 0vh;
+  display:flex;
+  justify-content: space-around;
+  margin: auto;
+}
+.diagram-sub-block{
+  width: 16vh;
+  height: 16vh;
+  border: 4px #ffecca solid;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: wrap;
+}
+.diagram-sub-block p{
+  font-weight: 800;
+  text-align: center;
+  padding: 1vw;
+  color: white;
+}
+.diagram-sub-block-2{
+  width: 10vh;
+  height: 10vh;
+  border: 4px #ffecca solid;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: wrap;
+}
+.diagram-sub-block-2 p{
+  font-size: 2vh;
+  font-weight: 800;
+  text-align: center;
+  padding: 1vw;
+  color: white;
+}
+#diagram-logo{
+  width: 17vh;
+  height: 17vh;
+  border-radius: 50%;
+  background: white;
+  display: flex;
+  align-items: center;
+}
+#diagram-logo img{
+  width: auto;
+  height: 11.8vh;
 }
 #arrow{
   height:5vh;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
-@media only screen and (min-width: 600px) {
+#arrow img{
+  transform: translateY(-3vh);
+  height: 13vh;
+} 
+/* description-end */
+
+@media only screen and (min-width: 900px) {
+  #description h2{
+    margin: 10vh 5vw 5vw 5vw;
+    font-size: 2.5rem; 
+  }
   #diagram{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     width:80vw;
     height:80vh;
+    margin: auto;
   }
   .diagram-block{
     width:15vw;
-
+    height: 30vh;
+    flex-direction: column;
   }
-  #arrow{
-    width:5vw;
+  .diagram-sub-block{
+    border-radius: 20px;
+    margin-bottom: 3vh;
+    width:14vw;
+  }
+  .diagram-sub-block-2{
+    border-radius: 20px;
+    margin-bottom: 3vh;
+    width:14vw;
+  }
+  .diagram-sub-block-2 p{
+    font-size: 1rem;
+  }
+  #diagram-logo{
+    width: 17vw;
+    height: 17vw;
+    border-radius: 50%;
+    background: white;
+    display: flex;
+    align-items: center;
+  }
+  #diagram-logo img{
+    width: 10vw;
+    height: auto;
+  }
+  #arrow img{
+    width:20vw;
+    height:40vh;
+    transform: rotate(270deg);
   }
 }
 /* description-end */
