--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
   padding: 0;
   margin: 0;
   font-family: 'Roboto Condensed', sans-serif;
-  /* box-sizing: border-box; */
 }
 body{
   background-color: black;
@@ -101,6 +100,9 @@ body{
 }
 #diagram{
   display:flex;
+  padding-top:3vh;
+  width:100vw;
+  /* background: #333; */
   flex-direction: column;
   height:70vh;
   justify-content: center;
@@ -170,6 +172,19 @@ body{
   height: 13vh;
 } 
 /* description-end */
+/* sign-up */
+#sign-up-frame{
+  background:teal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#sign-up-frame h2{
+  margin: 3vh;
+  text-align: left;
+  color: white
+}
 
 @media only screen and (min-width: 900px) {
   #description h2{
@@ -214,10 +229,12 @@ body{
     width: 10vw;
     height: auto;
   }
+  #arrow{
+    transform:translateX(-3vw);
+  }
   #arrow img{
     width:20vw;
     height:40vh;
     transform: rotate(270deg);
   }
 }
-/* description-end */
