--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
 
 /* globals */
-*{
+* {
   border: 0;
   padding: 0;
   margin: 0;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
-body{
+body {
   background-color: black;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
-.frame{
-  height:100vh;
+.frame {
+  height: 100vh;
 }
 .btn {
   padding: 0.5rem 2rem;
@@ -25,98 +25,119 @@ body{
   color: rgb(0, 0, 0);
   transition: background 500ms ease;
   box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.3),
-  -30px 0px 40px rgba(0, 0, 0, 0.3);
+    -30px 0px 40px rgba(0, 0, 0, 0.3);
 }
 .btn:hover {
   background: #f8bf54;
 }
-#sign-up{
+#sign-up {
   color: #333;
   margin-top: 1.5vh;
-  background-color:white;
+  background-color: white;
   border: 4px #dddddd solid;
   text-align: center;
+  width: 100%;
+  transition: all 0.4s ease;
+}
+#sign-up:hover {
+  border: 4px solid #f8bf54;
 }
 /* landing */
-#landing{
-  background-image: url("https://i.imgur.com/TEEFRKk.gif");
+#landing {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("https://i.imgur.com/TEEFRKk.gif");
   background-position: center;
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
 }
-#logo{
+#logo {
   padding-top: 5vh;
   padding-bottom: 0;
-  width:26vh;
+  width: 26vh;
   height: 26vh;
 }
-#landing-text{
+
+#landing-text {
+  position: relative;
   background: white;
-  width: 38vh;
-  height: 38vh;
+  background-image: url("./../images/basecount-logo.png");
+  background-position: center center;
+  background-size: 65% 65%, cover;
+  background-repeat: no-repeat;
+  width: 80vw;
+  max-width: 340px;
+  height: 80vw;
+  max-height: 340px;
   border-radius: 50%;
   box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.3),
-              -30px 0px 40px rgba(0, 0, 0, 0.3);
+    -30px 0px 40px rgba(0, 0, 0, 0.3);
 }
-#landing-text-inner{
+#landing-text-inner {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(100%);
   display: flex;
   flex-direction: column;
   margin: 0;
   padding: 0;
   justify-content: center;
   align-items: center;
-  overflow: wrap; 
+  overflow: wrap;
 }
-#landing-text-inner h2{
+#landing-text h2 {
+  position: absolute;
+  bottom: 7%;
+  left: 50%;
   margin: 0;
   padding: 0;
-  transform: translateY(-0.8vh);
+  transform: translateX(-50%);
   text-align: center;
-  font-size: 1.1rem; 
+  font-size: 1.1rem;
   line-height: 104%;
   color: grey;
 }
-#landing-text-inner span{
+#landing-text-inner span {
   padding-top: 0;
-  font-size: .95rem;
+  font-size: 0.95rem;
 }
 /* landing end */
 
 /* description */
-#description{
+#description {
   height: 100vh;
-  display:flex;
+  display: flex;
   flex-direction: column;
   padding: 0;
   margin: 0;
   background: red;
 }
-#description h2{
+#description h2 {
   margin: 3vh;
   text-align: left;
-  color: white
+  color: white;
 }
-#diagram{
-  display:flex;
-  padding-top:3vh;
-  width:100vw;
+#diagram {
+  display: flex;
+  padding-top: 3vh;
+  width: 100vw;
   /* background: #333; */
   flex-direction: column;
-  height:70vh;
+  height: 70vh;
   justify-content: center;
   align-items: center;
 }
-.diagram-block{
-  width:80vw;
-  height:16vh;
+.diagram-block {
+  width: 80vw;
+  height: 16vh;
   margin-bottom: 0vh;
-  display:flex;
+  display: flex;
   justify-content: space-around;
   margin: auto;
 }
-.diagram-sub-block{
+.diagram-sub-block {
   width: 16vh;
   height: 16vh;
   border: 4px #ffecca solid;
@@ -126,13 +147,13 @@ body{
   align-items: center;
   overflow: wrap;
 }
-.diagram-sub-block p{
+.diagram-sub-block p {
   font-weight: 800;
   text-align: center;
   padding: 1vw;
   color: white;
 }
-.diagram-sub-block-2{
+.diagram-sub-block-2 {
   width: 10vh;
   height: 10vh;
   border: 4px #ffecca solid;
@@ -142,14 +163,14 @@ body{
   align-items: center;
   overflow: wrap;
 }
-.diagram-sub-block-2 p{
+.diagram-sub-block-2 p {
   font-size: 2vh;
   font-weight: 800;
   text-align: center;
   padding: 1vw;
   color: white;
 }
-#diagram-logo{
+#diagram-logo {
   width: 17vh;
   height: 17vh;
   border-radius: 50%;
@@ -157,67 +178,67 @@ body{
   display: flex;
   align-items: center;
 }
-#diagram-logo img{
+#diagram-logo img {
   width: auto;
   height: 11.8vh;
 }
-#arrow{
-  height:5vh;
-  display:flex;
+#arrow {
+  height: 5vh;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
-#arrow img{
+#arrow img {
   transform: translateY(-3vh);
   height: 13vh;
-} 
+}
 /* description-end */
 /* sign-up */
-#sign-up-frame{
-  background:teal;
+#sign-up-frame {
+  background: teal;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-#sign-up-frame h2{
+#sign-up-frame h2 {
   margin: 3vh;
   text-align: left;
-  color: white
+  color: white;
 }
 
 @media only screen and (min-width: 900px) {
-  #description h2{
+  #description h2 {
     margin: 10vh 5vw 5vw 5vw;
-    font-size: 2.5rem; 
+    font-size: 2.5rem;
   }
-  #diagram{
+  #diagram {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width:80vw;
-    height:80vh;
+    width: 80vw;
+    height: 80vh;
     margin: auto;
   }
-  .diagram-block{
-    width:15vw;
+  .diagram-block {
+    width: 15vw;
     height: 30vh;
     flex-direction: column;
   }
-  .diagram-sub-block{
+  .diagram-sub-block {
     border-radius: 20px;
     margin-bottom: 3vh;
-    width:14vw;
+    width: 14vw;
   }
-  .diagram-sub-block-2{
+  .diagram-sub-block-2 {
     border-radius: 20px;
     margin-bottom: 3vh;
-    width:14vw;
+    width: 14vw;
   }
-  .diagram-sub-block-2 p{
+  .diagram-sub-block-2 p {
     font-size: 1rem;
   }
-  #diagram-logo{
+  #diagram-logo {
     width: 17vw;
     height: 17vw;
     border-radius: 50%;
@@ -225,16 +246,16 @@ body{
     display: flex;
     align-items: center;
   }
-  #diagram-logo img{
+  #diagram-logo img {
     width: 10vw;
     height: auto;
   }
-  #arrow{
-    transform:translateX(-3vw);
+  #arrow {
+    transform: translateX(-3vw);
   }
-  #arrow img{
-    width:20vw;
-    height:40vh;
+  #arrow img {
+    width: 20vw;
+    height: 40vh;
     transform: rotate(270deg);
   }
 }
